# nli-python

./: LICENSE  README.md  pyproject.toml  setup.py
nli_python/: __init__.py  decode.py  encode.py  utils.py
tests/: data.py  decode.py  encode.py
