[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nli_python"
version = "1.0.0"
authors = [
  { name="Robert Goss", email="rgoss@yat.ai" }
]
description = "An elegantly simple Encoding and Decoding of Location to eNLI Codes (Natural Location Identifier)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yat-co/nli-python"
"Bug Tracker" = "https://github.com/yat-co/nli-python/issues"